# longan-nano-tests

longan-nano-c/: .gitignore  Makefile  README.md  main-noirq.c
longan-nano-c/ld/: flash.ld
longan-nano-c/src/: main-noirq.c  start-noirq.s
longan-nano-rs/: Cargo.toml  Embed.toml  Makefile.toml  README.md  memory.x
longan-nano-rs/.cargo/: config.toml
longan-nano-rs/examples/: irq-test1.rs
support/: openocd-ftdi232h.cfg  openocd-jlink.cfg
