[package]
name = "longan_nano_rs"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2021"

autobins = false
autotests = false
autoexamples = false

[dependencies]
longan-nano = "0.3"
riscv-rt = "0.9.0"
panic-halt = "0.2.0"

# bins

[[bin]]
name = "blink"
path = "src/bin/blink.rs"

# examples

[[example]]
name = "uart-test1"
path = "examples/uart-test1.rs"
