[package]
name = "longan_nano_rs"
version = "0.1.0"
authors = ["Sergey Matyukevich <geomatsi@gmail.com>"]
edition = "2021"

autobins = false
autotests = false
autoexamples = false

[dependencies]
riscv = "0.9.0"
riscv-rt = "0.9.0"
panic-halt = "0.2.0"
gd32vf103xx-hal = "0.5.0"
embedded-graphics = "0.7.1"

[dependencies.longan-nano]
version = "0.3"
features = ["lcd"]

# bins

[[bin]]
name = "blink"
path = "src/bin/blink.rs"

[[bin]]
name = "ball"
path = "src/bin/ball.rs"

# examples

[[example]]
name = "uart-test1"
path = "examples/uart-test1.rs"

[[example]]
name = "irq-test1"
path = "examples/irq-test1.rs"
